# RAG-Assignment

./: .env.example  .gitignore  EVALUATION_REPORT.md  README.md  langgraph.json  pyproject.toml  requirements.txt
docs/: AGENTIC_WORKFLOW.md  Agent_Prompting_Best_Practices.md  Agentic_Backend_Choice_DeepAgents.md  EVALUATION.md  MODEL_SELECTION.md  RAG_Architecture_Decision_Document.md  Tool_Specification.md
evaluation/: README.md  questions.jsonl  run_benchmark.py  test_single_question.py
evaluation/results/: benchmark_20260109_220908.jsonl  single_question_test.json
papers/Latent Diffusion Models for Physics Emulation/: document.md
papers/Science-Datasets/: document.md
papers/Writing_effective_use_cases/: document.md
papers/vector symbolic finate state machines in Attractor Neural Networks/: document.md
preprocessing/: __init__.py  config.py  pdf_to_images.py  run.py  server.py
src/: __init__.py  agent.py  tools.py
